apps/webapp/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-backend
  namespace: webapp
  labels:
    app: webapp-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: webapp-backend
  template:
    metadata:
      labels:
        app: webapp-backend
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: webapp-backend
        image: ghcr.io/agndam-corp/web-backend:latest  # Updated image name
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: client-cert
          mountPath: /etc/ssl/certs/webapp
          readOnly: true
        - name: aws-config-volume
          mountPath: /root/.aws
          readOnly: true
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      volumes:
      - name: client-cert
        secret:
          secretName: webapp-client-tls
      - name: aws-config-volume
        emptyDir: {}
