apps/webapp/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-backend
  namespace: webapp
spec:
  selector:
    app: webapp-backend
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
