apps/webapp/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-backend
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - api.djasko.com
    secretName: webapp-api-djasko-com-tls
  rules:
  - host: api.djasko.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-backend
            port:
              number: 80
